--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             
             <p style="color:#777; font-size:14px; margin-bottom:20px; letter-spacing: 1px;">VERSIONES DISPONIBLES:</p>
             
-            <a href="Instalador_v1.11.exe" class="version-btn" style="border-color: #FFA500;">
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/commits/v1.11" class="version-btn" style="border-color: #FFA500;">
                 VERSIÓN 1.11 <span class="version-tag" style="background:#FFA500; color:black;">ULTIMATE</span>
             </a>
 
@@ -194,4 +194,5 @@
     </script>
 
 </body>
+
 </html>
