--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         /* HERO SECTION */
         .hero {
             height: 100vh;
-            background-image: url('fondo.jpg'); /* ASEGURATE DE TENER ESTA FOTO */
+            background-image: url('fondo.jpg'); /* FOTO DE PORTADA */
             background-size: cover; background-position: center;
             display: flex; align-items: center; position: relative;
         }
@@ -133,11 +133,11 @@
                 VERSIÓN 1.11 <span class="version-tag" style="background:#FFA500; color:black;">ULTIMATE</span>
             </a>
 
-            <a href="Instalador_v1.1.exe" class="version-btn">
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.1/Gas.Station.Simulator.3D.exe" class="version-btn">
                 VERSIÓN 1.1 <span class="version-tag">TURBO</span>
             </a>
 
-            <a href="Instalador_v1.0.exe" class="version-btn">
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.0/Instalador_v1.0.exe" class="version-btn">
                 VERSIÓN 1.0 <span class="version-tag">LEGACY</span>
             </a>
         </div>
