--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 VERSIÓN 1.1 <span class="version-tag">TURBO</span>
             </a>
 
-            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.0/Instalador_v1.0.exe" class="version-btn">
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.0/Gas.Station.Simulator.3D.exe" class="version-btn">
                 VERSIÓN 1.0 <span class="version-tag">LEGACY</span>
             </a>
         </div>
