Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h2 style="margin-top:0">ELIGE TU VERSIÓN</h2>
             <p style="color:#777; font-size:14px; margin-bottom:20px; letter-spacing: 1px;">VERSIONES DISPONIBLES:</p>
             
-            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.11/Instalador_v1.11.exe" class="version-btn" style="border-color: #FFA500;">
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.11/Gas.Station.Simulator.3D.exe" class="version-btn" style="border-color: #FFA500;">
                 VERSIÓN 1.11 <span class="version-tag" style="background:#FFA500; color:black;">ULTIMATE</span>
             </a>
 
