--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                     <div class="card-title">GAS STATION SIM 3D</div>
                     <p class="card-desc">El simulador definitivo. Economía real, autos deportivos y libertad total.</p>
                     
-                    <a href="gas-station/" target="_blank" class="btn-card">VER JUEGO COMPLETO</a>
+                    <a href="gas-station/" class="btn-card">VER JUEGO COMPLETO</a>
                 
                 </div>
             </div>
 
-            </div>
+        </div>
     </div>
 
     <footer>COPYRIGHT © 2025 MGGX GAMES.</footer>
