--- a/gas-station/index.html
+++ b/gas-station/index.html
@@ -9,12 +9,13 @@
 
         body, html { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; background-color: #050505; color: white; scroll-behavior: smooth; }
 
-        /* NAVBAR (Simplificada para volver al Home) */
+        /* NAVBAR - BACK BUTTON FIXED */
         .navbar { display: flex; justify-content: space-between; align-items: center; padding: 20px 50px; background: rgba(0, 0, 0, 0.9); position: fixed; width: 100%; top: 0; z-index: 1000; border-bottom: 2px solid #333; box-sizing: border-box; }
         .logo { font-family: 'Anton', sans-serif; font-size: 28px; letter-spacing: 2px; text-transform: uppercase; cursor: pointer; text-decoration: none; color: white; }
         .logo span { color: #FFA500; }
+        /* Botón volver estilo profesional */
         .back-btn { color: #aaa; text-decoration: none; font-weight: bold; text-transform: uppercase; font-size: 14px; border: 1px solid #555; padding: 8px 15px; transition: 0.3s; }
-        .back-btn:hover { border-color: #FFA500; color: #FFA500; }
+        .back-btn:hover { border-color: #FFA500; color: #FFA500; background: rgba(255, 165, 0, 0.1); }
 
         /* HERO JUEGO */
         .hero { height: 100vh; background-image: url('fondo.jpg'); background-size: cover; background-position: center; display: flex; align-items: center; position: relative; }
@@ -27,10 +28,15 @@
         .btn { display: inline-block; padding: 15px 40px; font-weight: 700; text-transform: uppercase; text-decoration: none; border: 2px solid white; transition: all 0.3s ease; cursor: pointer; letter-spacing: 1px; background: transparent; color: white; font-size: 18px; }
         .btn:hover { background-color: white; color: black; transform: scale(1.05); }
 
-        /* SECCIONES */
+        /* SECCIONES EXPANDIDAS */
         section { padding: 80px 50px; border-bottom: 1px solid #222; background-color: #0a0a0a; }
         .sec-title { font-family: 'Anton'; font-size: 40px; color: #FFA500; margin-bottom: 20px; }
-        .text-block { color: #aaa; line-height: 1.6; max-width: 800px; }
+        .text-block { color: #aaa; line-height: 1.8; max-width: 900px; font-size: 16px; }
+        
+        .feature-list { list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 20px; margin-top: 30px; }
+        .feature-item { width: 45%; background: #111; padding: 20px; border-left: 3px solid #FFA500; box-sizing: border-box; }
+        .feature-title { color: white; font-weight: bold; margin-bottom: 10px; display: block; font-size: 18px; }
+
         .gallery-grid { display: flex; gap: 15px; margin-top: 30px; flex-wrap: wrap; }
         .gallery-img { width: 300px; height: 170px; object-fit: cover; border: 1px solid #333; transition: transform 0.3s; cursor: pointer; }
         .gallery-img:hover { transform: scale(1.05); border-color: #FFA500; }
@@ -54,14 +60,14 @@
         footer { padding: 40px; text-align: center; color: #555; font-size: 12px; background: #080808; }
         .mail-link { color: #FFA500; font-size: 20px; font-weight: bold; text-decoration: none; }
 
-        @media (max-width: 768px) { h1 { font-size: 50px; } .content { padding-left: 20px; } .navbar { padding: 20px; } }
+        @media (max-width: 768px) { h1 { font-size: 50px; } .content { padding-left: 20px; } .navbar { padding: 20px; } .feature-item { width: 100%; } }
     </style>
 </head>
 <body>
 
     <nav class="navbar">
-        <a href="index.html" class="logo">MGGX <span>GAMES</span></a>
-        <a href="index.html" class="back-btn">VOLVER AL INICIO</a>
+        <a href="../" class="logo">MGGX <span>GAMES</span></a>
+        <a href="../" class="back-btn">← VOLVER AL INICIO</a>
     </nav>
 
     <section class="hero">
@@ -70,8 +76,8 @@
             <h1>Gas Station<br>Simulator 3D</h1>
             <h2>YA DISPONIBLE PARA PC</h2>
             <p class="description">
-                Gestiona stock, controla la economía y atiende clientes con físicas realistas.
-                <br>Versión 1.11 Ultimate disponible.
+                El simulador que redefine el género. Gestiona stock, controla la economía en tiempo real y construye tu imperio desde cero.
+                <br>Desarrollado con pasión en Unity.
             </p>
             <button class="btn" onclick="abrirAdvertencia()">DESCARGAR AHORA</button>
         </div>
@@ -82,8 +88,8 @@
             <span class="close" onclick="cerrarTodo()">&times;</span>
             <div class="warning-title">⚠️ IMPORTANTE ⚠️</div>
             <div class="warning-text">
-                <p><strong>El juego es 100% SEGURO.</strong></p>
-                <p>Al ser Indie, Windows puede mostrar una alerta azul (SmartScreen).</p>
+                <p><strong>El juego es 100% SEGURO y GRATIS.</strong></p>
+                <p>Como soy desarrollador Indie, Windows puede mostrar una alerta azul (SmartScreen).</p>
                 <ul style="padding-left: 20px; color: #FFD700;">
                     <li>Clic en <u>"Más información"</u>.</li>
                     <li>Clic en <strong>"Ejecutar de todas formas"</strong>.</li>
@@ -114,11 +120,26 @@
     <section id="info">
         <div class="sec-title">SOBRE EL JUEGO</div>
         <div class="text-block">
-            <p>Gas Station Simulator 3D rompe con los esquemas tradicionales. No es solo hacer clic; es vivir la experiencia.</p>
-            <ul>
-                <li>Control en Tercera Persona</li>
-                <li>Físicas de Manguera en tiempo real</li>
-                <li>IA de Tráfico Inteligente</li>
+            <p>Gas Station Simulator 3D no es el típico juego "Idle". Aquí tienes el control total de tu personaje en tercera persona. Camina por la estación, interactúa físicamente con las mangueras de combustible y gestiona cada aspecto de tu negocio.</p>
+            <p>El objetivo es simple pero desafiante: comenzar con una estación abandonada y convertirla en el punto de carga más lujoso de la ciudad, desbloqueando mejoras, surtidores modernos y atrayendo autos deportivos de alta gama.</p>
+
+            <ul class="feature-list">
+                <li class="feature-item">
+                    <span class="feature-title">⚡ Físicas Realistas</span>
+                    Sistema de mangueras (Rope Physics) que reaccionan al movimiento y colisiones.
+                </li>
+                <li class="feature-item">
+                    <span class="feature-title">🚗 IA de Tráfico Avanzada</span>
+                    Los conductores tienen paciencia, hacen fila y reaccionan si tardas demasiado en atenderlos.
+                </li>
+                <li class="feature-item">
+                    <span class="feature-title">📈 Economía Dinámica</span>
+                    Gana dinero por cada litro vendido. Invierte en stock antes de que se agote o suban los precios.
+                </li>
+                <li class="feature-item">
+                    <span class="feature-title">🖥️ Optimización</span>
+                    Diseñado para correr fluido en la mayoría de las PCs, con gráficos estilizados y buen rendimiento.
+                </li>
             </ul>
         </div>
     </section>
@@ -136,8 +157,8 @@
     <section id="soporte">
         <div class="sec-title">SOPORTE TÉCNICO</div>
         <div class="text-block">
-            <p>¿Encontraste un bug? Contactame:</p>
-            <a href="mailto:maxgab201@gmail.com" class="mail-link">maxgab201@gmail.com</a>
+            <p>¿Encontraste un bug? Puedes reportarlo directamente en la sección de Contacto del sitio principal.</p>
+            <a href="../#contacto" class="btn" style="font-size:14px; padding:10px 20px;">IR A CONTACTO</a>
         </div>
     </section>
 
