--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         .btn-card { display: inline-block; padding: 10px 20px; background: transparent; border: 1px solid #FFA500; color: #FFA500; font-weight: bold; text-decoration: none; text-transform: uppercase; font-size: 12px; transition: 0.3s; }
         .btn-card:hover { background: #FFA500; color: black; }
 
-        /* CONTACTO (MEJORADO) */
+        /* CONTACTO */
         .contact-section { padding: 80px 20px; background: #050505; text-align: center; }
         .contact-box { max-width: 500px; margin: 0 auto; background: #111; padding: 40px; border: 1px solid #333; }
         .contact-name { font-size: 24px; font-weight: bold; color: white; margin-bottom: 10px; }
@@ -70,7 +70,7 @@
         <h1 class="mggx-title">MGGX GAMES</h1>
         <div class="mggx-subtitle">INDIE GAME DEVELOPMENT</div>
         <p class="mggx-desc">
-            Estudio independiente creado por Máximo.<br>
+            Estudio independiente creado por Maximo.<br>
             Desarrollando experiencias inmersivas, mecánicas únicas y mundos abiertos en Unity.
         </p>
         <div class="scroll-down" onclick="location.href='#juegos'">&#x2193;</div>
@@ -95,7 +95,7 @@
     <div id="contacto" class="contact-section">
         <div class="section-header">CONTACTO <span>OFICIAL</span></div>
         <div class="contact-box">
-            <div class="contact-name">MÁXIMO</div>
+            <div class="contact-name">MAXIMO</div>
             <div class="contact-role">Fundador & Desarrollador Principal</div>
             <p style="color:#aaa; margin-bottom: 30px; line-height: 1.6;">
                 ¿Tenés feedback sobre los juegos, reportes de bugs o propuestas de colaboración?
