--- a/gas-station/index.html
+++ b/gas-station/index.html
@@ -74,9 +74,9 @@
         <div class="overlay"></div>
         <div class="content">
             <h1>Gas Station<br>Simulator 3D</h1>
-            <h2>YA DISPONIBLE PARA PC</h2>
+            <h2>v1.2 - THE PERFORMANCE UPDATE</h2>
             <p class="description">
-                El simulador que redefine el género. Gestiona stock, controla la economía en tiempo real y construye tu imperio desde cero.
+                El simulador que redefine el género. Ahora con tiempos de carga instantáneos, iluminación realista y bugs corregidos.
                 <br>Desarrollado con pasión en Unity.
             </p>
             <button class="btn" onclick="abrirAdvertencia()">DESCARGAR AHORA</button>
@@ -105,12 +105,14 @@
             <h2 style="margin-top:0">ELIGE TU VERSIÓN</h2>
             <p style="color:#777; font-size:14px; margin-bottom:20px;">DESDE GITHUB:</p>
             
-            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.11/Gas.Station.Simulator.3D.exe" class="version-btn" style="border-color: #FFA500;">
-                VERSIÓN 1.11 <span class="version-tag" style="background:#FFA500; color:black;">ULTIMATE</span>
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.2/Gas.Station.Simulator.3D.exe" class="version-btn" style="border-color: #FFA500;">
+                VERSIÓN 1.2 <span class="version-tag" style="background:#FFA500; color:black;">PERFORMANCE (NUEVA)</span>
             </a>
-            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.1/Gas.Station.Simulator.3D.exe" class="version-btn">
-                VERSIÓN 1.1 <span class="version-tag">TURBO</span>
+
+            <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.11/Gas.Station.Simulator.3D.exe" class="version-btn">
+                VERSIÓN 1.11 <span class="version-tag">STABLE</span>
             </a>
+
             <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.0/Gas.Station.Simulator.3D.exe" class="version-btn">
                 VERSIÓN 1.0 <span class="version-tag">LEGACY</span>
             </a>
@@ -125,8 +127,8 @@
 
             <ul class="feature-list">
                 <li class="feature-item">
-                    <span class="feature-title">⚡ Físicas Realistas</span>
-                    Sistema de mangueras (Rope Physics) que reaccionan al movimiento y colisiones.
+                    <span class="feature-title">⚡ Cargas Instantáneas</span>
+                    Optimizado con el nuevo sistema "Performance Update" (v1.2) para que juegues sin esperas.
                 </li>
                 <li class="feature-item">
                     <span class="feature-title">🚗 IA de Tráfico Avanzada</span>
@@ -146,7 +148,7 @@
 
     <section id="galeria">
         <div class="sec-title">GALERÍA</div>
-        <div style="color:#aaa; margin-bottom:10px;">Capturas in-game de la versión 1.11.</div>
+        <div style="color:#aaa; margin-bottom:10px;">Capturas in-game de la versión 1.2.</div>
         <div class="gallery-grid">
             <img src="foto1.jpg" class="gallery-img" alt="Gameplay 1">
             <img src="foto2.jpg" class="gallery-img" alt="Gameplay 2">
