--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="fondo.jpg" alt="Gas Station" class="card-img">
                 <div class="card-content">
                     <div class="card-title">GAS STATION SIM 3D</div>
-                    <p class="card-desc">El simulador definitivo. Economía real, autos deportivos y libertad total.</p>
+                    <p class="card-desc">Simulador de gestión definitivo. <strong>¡Nueva Actualización v1.2 disponible!</strong> Rendimiento extremo y cargas rápidas.</p>
                     <a href="gas-station/" class="btn-card">VER JUEGO COMPLETO</a>
                 </div>
             </div>
