--- a/gas-station/index.html
+++ b/gas-station/index.html
@@ -9,11 +9,10 @@
 
         body, html { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; background-color: #050505; color: white; scroll-behavior: smooth; }
 
-        /* NAVBAR - BACK BUTTON FIXED */
+        /* NAVBAR */
         .navbar { display: flex; justify-content: space-between; align-items: center; padding: 20px 50px; background: rgba(0, 0, 0, 0.9); position: fixed; width: 100%; top: 0; z-index: 1000; border-bottom: 2px solid #333; box-sizing: border-box; }
         .logo { font-family: 'Anton', sans-serif; font-size: 28px; letter-spacing: 2px; text-transform: uppercase; cursor: pointer; text-decoration: none; color: white; }
         .logo span { color: #FFA500; }
-        /* Botón volver estilo profesional */
         .back-btn { color: #aaa; text-decoration: none; font-weight: bold; text-transform: uppercase; font-size: 14px; border: 1px solid #555; padding: 8px 15px; transition: 0.3s; }
         .back-btn:hover { border-color: #FFA500; color: #FFA500; background: rgba(255, 165, 0, 0.1); }
 
@@ -28,15 +27,26 @@
         .btn { display: inline-block; padding: 15px 40px; font-weight: 700; text-transform: uppercase; text-decoration: none; border: 2px solid white; transition: all 0.3s ease; cursor: pointer; letter-spacing: 1px; background: transparent; color: white; font-size: 18px; }
         .btn:hover { background-color: white; color: black; transform: scale(1.05); }
 
-        /* SECCIONES EXPANDIDAS */
+        /* SECCIONES */
         section { padding: 80px 50px; border-bottom: 1px solid #222; background-color: #0a0a0a; }
         .sec-title { font-family: 'Anton'; font-size: 40px; color: #FFA500; margin-bottom: 20px; }
         .text-block { color: #aaa; line-height: 1.8; max-width: 900px; font-size: 16px; }
         
+        /* CAJA DE NOVEDADES (Patch Notes) - NUEVO */
+        .patch-box { background: #151515; border: 1px solid #333; border-left: 5px solid #FFA500; padding: 25px; margin-bottom: 40px; max-width: 850px; }
+        .patch-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
+        .patch-title { color: white; font-weight: bold; font-size: 20px; text-transform: uppercase; }
+        .patch-date { color: #666; font-size: 12px; }
+        .patch-list { list-style: none; padding: 0; margin: 0; color: #ccc; font-size: 15px; }
+        .patch-list li { margin-bottom: 8px; display: flex; align-items: flex-start; }
+        .patch-list li::before { content: "➤"; color: #FFA500; margin-right: 10px; font-size: 12px; margin-top: 4px; }
+
+        /* CARACTERÍSTICAS */
         .feature-list { list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 20px; margin-top: 30px; }
         .feature-item { width: 45%; background: #111; padding: 20px; border-left: 3px solid #FFA500; box-sizing: border-box; }
         .feature-title { color: white; font-weight: bold; margin-bottom: 10px; display: block; font-size: 18px; }
 
+        /* GALERÍA */
         .gallery-grid { display: flex; gap: 15px; margin-top: 30px; flex-wrap: wrap; }
         .gallery-img { width: 300px; height: 170px; object-fit: cover; border: 1px solid #333; transition: transform 0.3s; cursor: pointer; }
         .gallery-img:hover { transform: scale(1.05); border-color: #FFA500; }
@@ -58,7 +68,6 @@
         .version-tag { font-size: 10px; background: #444; padding: 2px 5px; border-radius: 3px; margin-left: 10px; text-transform: uppercase;}
 
         footer { padding: 40px; text-align: center; color: #555; font-size: 12px; background: #080808; }
-        .mail-link { color: #FFA500; font-size: 20px; font-weight: bold; text-decoration: none; }
 
         @media (max-width: 768px) { h1 { font-size: 50px; } .content { padding-left: 20px; } .navbar { padding: 20px; } .feature-item { width: 100%; } }
     </style>
@@ -108,11 +117,9 @@
             <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.2/Gas.Station.Simulator.3D.exe" class="version-btn" style="border-color: #FFA500;">
                 VERSIÓN 1.2 <span class="version-tag" style="background:#FFA500; color:black;">PERFORMANCE (NUEVA)</span>
             </a>
-
             <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.1/Gas.Station.Simulator.3D.exe" class="version-btn">
                 VERSIÓN 1.1 <span class="version-tag">STABLE</span>
             </a>
-
             <a href="https://github.com/maxgab201/Gas-Station-Simulator-3D/releases/download/v1.0/Gas.Station.Simulator.3D.exe" class="version-btn">
                 VERSIÓN 1.0 <span class="version-tag">LEGACY</span>
             </a>
@@ -121,14 +128,26 @@
 
     <section id="info">
         <div class="sec-title">SOBRE EL JUEGO</div>
+        
+        <div class="patch-box">
+            <div class="patch-header">
+                <span class="patch-title">QUÉ HAY DE NUEVO EN LA <span style="color:#FFA500">v1.2</span></span>
+                <span class="patch-date">Diciembre 2025</span>
+            </div>
+            <ul class="patch-list">
+                <li><strong>CARGAS INSTANTÁNEAS:</strong> Sistema optimizado. El juego inicia en menos de 2 segundos.</li>
+                <li><strong>ILUMINACIÓN REALISTA:</strong> Reconstrucción total de luces (GPU Lightmapping) para eliminar manchas negras.</li>
+                <li><strong>FIXES:</strong> Solucionado el bug que impedía usar el botón "Salir" y mejoras en el menú de pausa.</li>
+            </ul>
+        </div>
         <div class="text-block">
             <p>Gas Station Simulator 3D no es el típico juego "Idle". Aquí tienes el control total de tu personaje en tercera persona. Camina por la estación, interactúa físicamente con las mangueras de combustible y gestiona cada aspecto de tu negocio.</p>
             <p>El objetivo es simple pero desafiante: comenzar con una estación abandonada y convertirla en el punto de carga más lujoso de la ciudad, desbloqueando mejoras, surtidores modernos y atrayendo autos deportivos de alta gama.</p>
 
             <ul class="feature-list">
                 <li class="feature-item">
-                    <span class="feature-title">⚡ Cargas Instantáneas</span>
-                    Optimizado con el nuevo sistema "Performance Update" (v1.2) para que juegues sin esperas.
+                    <span class="feature-title">⚡ Físicas Realistas</span>
+                    Sistema de mangueras (Rope Physics) que reaccionan al movimiento y colisiones.
                 </li>
                 <li class="feature-item">
                     <span class="feature-title">🚗 IA de Tráfico Avanzada</span>
