--- a/index.html
+++ b/index.html
@@ -6,31 +6,20 @@
     <title>MGGX Games - Official Site</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;700&display=swap');
-
-        /* ESTILOS GENERALES */
         body, html { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; background-color: #050505; color: white; scroll-behavior: smooth; }
-
-        /* NAVBAR */
         .navbar { display: flex; justify-content: space-between; align-items: center; padding: 20px 50px; background: rgba(0, 0, 0, 0.95); position: fixed; width: 100%; top: 0; z-index: 1000; box-sizing: border-box; border-bottom: 2px solid #333; }
         .logo { font-family: 'Anton', sans-serif; font-size: 28px; letter-spacing: 2px; text-transform: uppercase; cursor: pointer; text-decoration: none; color: white; }
         .logo span { color: #FFA500; }
         .menu { margin-left: auto; }
         .menu a { color: #aaa; text-decoration: none; margin-left: 40px; font-weight: 700; font-size: 14px; text-transform: uppercase; transition: 0.3s; }
         .menu a:hover { color: #FFA500; }
-
-        /* INTRO */
         .intro-section { height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: radial-gradient(circle, #1a1a1a 0%, #000000 100%); text-align: center; padding: 20px; }
         .mggx-title { font-family: 'Anton', sans-serif; font-size: 100px; margin: 0; background: linear-gradient(to right, #fff, #888); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: 5px; }
         .mggx-subtitle { font-size: 20px; color: #FFA500; margin-top: 10px; letter-spacing: 3px; text-transform: uppercase; }
         .mggx-desc { max-width: 600px; margin-top: 30px; color: #aaa; line-height: 1.6; font-size: 16px; }
-        .scroll-down { margin-top: 60px; font-size: 30px; animation: bounce 2s infinite; color: #555; cursor: pointer; }
-        @keyframes bounce { 0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 40% {transform: translateY(-10px);} 60% {transform: translateY(-5px);} }
-
-        /* CATALOGO */
         .games-list-section { padding: 100px 50px; background-color: #0a0a0a; min-height: 60vh; border-bottom: 1px solid #222; }
         .section-header { font-family: 'Anton'; font-size: 50px; color: white; margin-bottom: 50px; text-align: center; }
         .section-header span { color: #FFA500; }
-        
         .games-grid { display: flex; justify-content: center; flex-wrap: wrap; gap: 40px; }
         .game-card { width: 350px; background: #111; border: 1px solid #333; transition: transform 0.3s, border-color 0.3s; position: relative; overflow: hidden; }
         .game-card:hover { transform: translateY(-10px); border-color: #FFA500; }
@@ -41,22 +30,10 @@
         .card-desc { font-size: 14px; color: #aaa; margin-bottom: 20px; line-height: 1.4; }
         .btn-card { display: inline-block; padding: 10px 20px; background: transparent; border: 1px solid #FFA500; color: #FFA500; font-weight: bold; text-decoration: none; text-transform: uppercase; font-size: 12px; transition: 0.3s; }
         .btn-card:hover { background: #FFA500; color: black; }
-
-        /* CONTACTO */
-        .contact-section { padding: 80px 20px; background: #050505; text-align: center; }
-        .contact-box { max-width: 500px; margin: 0 auto; background: #111; padding: 40px; border: 1px solid #333; }
-        .contact-name { font-size: 24px; font-weight: bold; color: white; margin-bottom: 10px; }
-        .contact-role { color: #FFA500; font-size: 14px; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 30px; }
-        .contact-btn { background: #FFA500; color: black; padding: 15px 30px; text-decoration: none; font-weight: bold; display: inline-block; text-transform: uppercase; transition: 0.3s; }
-        .contact-btn:hover { background: white; }
-
         footer { padding: 40px; text-align: center; color: #555; font-size: 12px; background: #000; border-top: 1px solid #222;}
-
-        @media (max-width: 768px) { .mggx-title { font-size: 60px; } .navbar { padding: 20px; } .menu { display: none; } }
     </style>
 </head>
 <body>
-
     <nav class="navbar">
         <a href="#" class="logo">MGGX <span>GAMES</span></a>
         <div class="menu">
@@ -69,42 +46,32 @@
     <div id="inicio" class="intro-section">
         <h1 class="mggx-title">MGGX GAMES</h1>
         <div class="mggx-subtitle">INDIE GAME DEVELOPMENT</div>
-        <p class="mggx-desc">
-            Estudio independiente creado por Maximo.<br>
-            Desarrollando experiencias inmersivas, mecánicas únicas y mundos abiertos en Unity.
-        </p>
-        <div class="scroll-down" onclick="location.href='#juegos'">&#x2193;</div>
+        <p class="mggx-desc">Estudio independiente creado por Maximo.<br>Experiencias inmersivas y herramientas de utilidad.</p>
     </div>
 
     <div id="juegos" class="games-list-section">
         <div class="section-header">NUESTROS <span>PROYECTOS</span></div>
         <div class="games-grid">
-            
             <div class="game-card">
                 <img src="fondo.jpg" alt="Gas Station" class="card-img">
                 <div class="card-content">
                     <div class="card-title">GAS STATION SIM 3D</div>
-                    <p class="card-desc">Simulador de gestión definitivo. <strong>¡Nueva Actualización v1.2 disponible!</strong> Rendimiento extremo y cargas rápidas.</p>
+                    <p class="card-desc">v1.2 disponible. Optimización extrema y rendimiento mejorado.</p>
                     <a href="gas-station/" class="btn-card">VER JUEGO COMPLETO</a>
                 </div>
             </div>
 
-        </div>
-    </div>
-
-    <div id="contacto" class="contact-section">
-        <div class="section-header">CONTACTO <span>OFICIAL</span></div>
-        <div class="contact-box">
-            <div class="contact-name">MAXIMO</div>
-            <div class="contact-role">Fundador & Desarrollador Principal</div>
-            <p style="color:#aaa; margin-bottom: 30px; line-height: 1.6;">
-                ¿Tenés feedback sobre los juegos, reportes de bugs o propuestas de colaboración?
-            </p>
-            <a href="mailto:maxgab201@gmail.com" class="contact-btn">ENVIAR EMAIL</a>
+            <div class="game-card">
+                <img src="autoclicker.jpg" alt="Autoclicker" class="card-img">
+                <div class="card-content">
+                    <div class="card-title">MGGX AUTOCLICKER</div>
+                    <p class="card-desc">Automatiza tus clics con nuestra herramienta oficial ultra rápida.</p>
+                    <a href="autoclicker/" class="btn-card">DESCARGAR APP</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <footer>COPYRIGHT © 2025 MGGX GAMES.</footer>
-
 </body>
 </html>
